test/sema/var_ref_error.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

fn foo(x: *i32) -> void {
    *x = 20;
}

fn main() -> void {
    let i = 10;
    // CHECK: [[# @LINE + 1 ]]:9: error: unexpected type of argument 'i32' expected '*i32'
    foo(i);
}

// CHECK-NOT: {{.*}}